# richi

./: .env.example  .gitignore  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  publish.sh
.github/workflows/: deploy.yml
ci/: publish_images.sh
mosquitto/config/: mosquitto.conf
mqtt-broker/: Dockerfile  entrypoint.sh  mosquitto.conf
mqtt_broker/: entrypoint.sh
reverse-proxy/: Dockerfile
reverse_proxy/: Caddyfile
scripts/: deploy.sh  publish_images.sh
web-client/: Dockerfile  README.md  eslint.config.ts  package-lock.json  package.json
web-client/src/app-layout/: AppHeader.vue  AppLayout.vue
web-client/src/login/: VerificationCodeForm.vue
web-client/src/open-lock/: OpenLockView.vue
web-client/src/shared/: webservice-request.ts
web-service/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
web-service/src/: auth.rs  config.rs  main.rs
web_client/: README.md  eslint.config.ts  package-lock.json  package.json  vite.config.ts
web_client/src/: App.vue  AppLayout.vue  LockRequestView.vue  LoginView.vue  LogoutButton.vue  OpenDoorView.vue  OpenLockView.vue  main.ts  supabase.ts
web_client/src/app-layout/: LogoutButton.vue
web_client/src/login/: LoginView.vue  PhoneNumberForm.vue  VerificationCodeForm.vue  login.ts
web_client/src/open-lock/: OpenLockView.vue
web_client/src/shared/: async-state.ts  auth.ts  error.ts  supabase.ts  useAsyncState.ts
web_service/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
web_service/src/: api.rs  auth.rs  config.rs  error.rs  main.rs  mqtt.rs
(+7 files in other folders)
