[package]
name = "richi_remote_lock_web_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
jsonwebtoken = "9.3.1"
jwks = "0.4.0"
once_cell = "1.21.3"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.24.0"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
